[package]
name = "comcom"
version = "0.1.0"
edition = "2021"
description = "A tool designed to make it easier to compose complex commands"
license = "MIT"
authors = ["Daniel O'Brien <dob9601@gmail.com>"]
repository = "https://github.com/dob9601/comcom"

[dependencies]
clipboard = "0.5.0"
colored = "2.0.0"
crossterm = "0.26.1"
regex = "1.7.3"
thiserror = "1.0.40"
tui = "0.19.0"
